--- a/Python Files/Indices/MAGE tester.ipynb
+++ b/Python Files/Indices/MAGE tester.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-01T05:04:30.749367Z",
+     "start_time": "2020-12-01T05:04:27.496706Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -14,8 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-01T05:04:31.505288Z",
+     "start_time": "2020-12-01T05:04:31.464053Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from tqdm.auto import tqdm"
@@ -23,8 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-01T05:04:32.491312Z",
+     "start_time": "2020-12-01T05:04:32.485988Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pd.set_option(\"max_rows\", None)"
@@ -32,8 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-01T05:04:34.636893Z",
+     "start_time": "2020-12-01T05:04:34.612931Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def fullDay(data):\n",
@@ -70,18 +90,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-01T05:04:35.850994Z",
+     "start_time": "2020-12-01T05:04:35.839727Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "def smoothing(data):\n",
-    "    series = data\n",
-    "    # Tail-rolling average transform\n",
-    "    rolling = series.rolling(window=72)\n",
-    "    rolling_mean = rolling.mean()\n",
-    "    return rolling_mean\n",
+    " def smoothing(data):\n",
+    "        \"\"\"\n",
+    "            This method performs a EWM smoothening for a time-series to improve MAGE calculation\n",
+    "            \n",
+    "            Function Parameters:\n",
+    "            data: The default dataset (CSV file) includes data from the CGMAnalysis package, Gluvarpro package, CGMAnalyzer package and the Ohio University with the following format:\n",
+    "            Display Time     object\n",
+    "            GlucoseValue    float64\n",
+    "            subjectId        object\n",
+    "            This data is split based on the subject ID\n",
+    "            type: pandas DataFrame\n",
+    "\n",
+    "            Returns:\n",
+    "            A pandas DataFrame with smoothened glucose values\n",
+    "        \"\"\" \n",
+    "        \n",
+    "        data.GlucoseValue = data.GlucoseValue.ewm(alpha=0.1, adjust=False).mean()\n",
+    "        data.GlucoseValue = data.GlucoseValue.round()\n",
+    "        \n",
+    "        return data\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-01T05:07:37.376731Z",
+     "start_time": "2020-12-01T05:07:37.340237Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def mageCalculations(df, stdev):\n",
+    "    \n",
+    "    #smoothening the data\n",
+    "    df = smoothing(df)\n",
+    "    df = fullDay(df)\n",
+    "    length = df['Display Time'].iloc[-1]-df['Display Time'].iloc[0]\n",
+    "    length = length.round(\"d\")\n",
+    "    days = length.days\n",
+    "    \n",
+    "    df.GlucoseValue = df.GlucoseValue.round()\n",
+    "    \n",
+    "    glucs = df['GlucoseValue'].tolist()\n",
+    "    indices = [1*i for i in range(len(glucs))]\n",
+    "    \n",
+    "    x = indices\n",
+    "    gvs = glucs\n",
+    "\n",
+    "    # detection of local minima and maxima\n",
+    "\n",
+    "    # local min & max\n",
+    "    a = np.diff(np.sign(np.diff(gvs))).nonzero()[0] + 1      \n",
+    "    # local min\n",
+    "    valleys = (np.diff(np.sign(np.diff(gvs))) > 0).nonzero()[0] + 1 \n",
+    "    # local max\n",
+    "    peaks = (np.diff(np.sign(np.diff(gvs))) < 0).nonzero()[0] + 1 \n",
+    "    \n",
+    "    excursion_points = pd.DataFrame(columns=['Index', 'Timestamp', 'GlucoseValue', 'Type'])\n",
+    "    k=0\n",
+    "    for i in range(len(peaks)):\n",
+    "        excursion_points.loc[k] = [peaks[i]] + [df['Display Time'][k]] + [df['GlucoseValue'][k]] + [\"P\"]\n",
+    "        k+=1\n",
+    "\n",
+    "    for i in range(len(valleys)):\n",
+    "        excursion_points.loc[k] = [valleys[i]] + [df['Display Time'][k]] + [df['GlucoseValue'][k]] + [\"V\"]\n",
+    "        k+=1\n",
+    "\n",
+    "    excursion_points = excursion_points.sort_values(by=['Index'])\n",
+    "    excursion_points = excursion_points.reset_index(drop=True)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    #stdev = 1\n",
+    "    turning_points = pd.DataFrame(columns=['Index', 'Timestamp', 'GlucoseValue', 'Type'])\n",
+    "    k=0\n",
+    "    for i in range(stdev,len(excursion_points.Index)-stdev):\n",
+    "        positions = [i-stdev,i,i+stdev]\n",
+    "        for j in range(0,len(positions)-1):\n",
+    "            if(excursion_points.Type[positions[j]] == excursion_points.Type[positions[j+1]]):\n",
+    "                if(excursion_points.Type[positions[j]]=='P'):\n",
+    "                    if excursion_points.GlucoseValue[positions[j]]>=(excursion_points.GlucoseValue[positions[j+1]]+2):\n",
+    "                        turning_points.loc[k] = excursion_points.loc[positions[j+1]]\n",
+    "                        k+=1\n",
+    "                    else:\n",
+    "                        turning_points.loc[k] = excursion_points.loc[positions[j+1]]\n",
+    "                        k+=1\n",
+    "                else:\n",
+    "                    if (excursion_points.GlucoseValue[positions[j]]-2)<=excursion_points.GlucoseValue[positions[j+1]]:\n",
+    "                        turning_points.loc[k] = excursion_points.loc[positions[j]]\n",
+    "                        k+=1\n",
+    "                    else:\n",
+    "                        turning_points.loc[k] = excursion_points.loc[positions[j+1]]\n",
+    "                        k+=1\n",
+    "  \n",
+    "    if len(turning_points.index)<10:\n",
+    "        print(True)\n",
+    "        turning_points = excursion_points.copy()\n",
+    "\n",
+    "    turning_points = turning_points.drop_duplicates(subset= \"Index\", keep= \"first\")\n",
+    "    turning_points = turning_points.reset_index(drop=True)\n",
+    "    turning_points_count = len(turning_points.index)\n",
+    "    \n",
+    "    \n",
+    "    mage = turning_points.GlucoseValue.sum()/turning_points_count\n",
+    "    #print(mage)\n",
+    "    mage_per_day = mage/days\n",
+    "    #print(mage_per_day)\n",
+    "    \n",
+    "    return mage, mage_per_day\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-01T05:07:44.663042Z",
+     "start_time": "2020-12-01T05:07:38.478073Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(\"~/Desktop/NCSA_genomics/Python Files/GlucoCheck/Data/consolidatedDataForPackage.csv\")\n",
+    "data['Display Time'] = data['Display Time'].apply(lambda x: pd.datetime.strptime(x, '%m/%d/%y %H:%M'))\n",
+    "#extracting data for individual 1636-69-032 \n",
+    "df = data[data['subjectId']=='1636-69-032']\n",
+    "df = df.reset_index(drop=True)\n",
+    "\n",
+    "df = df[df['GlucoseValue'].notna()]\n",
+    "df = df.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-01T05:17:59.860809Z",
+     "start_time": "2020-12-01T05:17:57.260067Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(104.07407407407408, 20.814814814814817)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x,y = mageCalculations(df, 1)\n",
+    "x,y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -17395,6 +17595,8 @@
     }
    ],
    "source": [
+    "mage = turning_points.GlucoseValue.sum()/turning_points_count\n",
+    "print(mage)\n",
     "mage_per_day = mage/days\n",
     "print(mage_per_day)"
    ]
