--- a/Python Files/other notebooks/Decision Tree Classifier.ipynb
+++ b/Python Files/other notebooks/Decision Tree Classifier.ipynb
@@ -2,14 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-16T20:33:26.173827Z",
-     "start_time": "2020-10-16T20:33:26.155288Z"
+     "end_time": "2020-12-05T05:35:01.100734Z",
+     "start_time": "2020-12-05T05:34:57.837309Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n",
+      "/opt/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n",
+      "/opt/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n",
+      "/opt/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n",
+      "/opt/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -22,17 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-16T20:31:02.259993Z",
-     "start_time": "2020-10-16T20:31:02.062408Z"
+     "end_time": "2020-12-05T05:36:17.793529Z",
+     "start_time": "2020-12-05T05:36:17.673104Z"
     }
    },
    "outputs": [],
    "source": [
-    "data = pd.read_csv('GlucoCheck/Data/Hall/Hall_data.csv')\n",
-    "meta = pd.read_csv('GlucoCheck/Data/Hall/Hall_meta.csv')\n",
+    "data = pd.read_csv('~/Desktop/NCSA_genomics/Python Files/GlucoCheck/Data/Hall/Hall_data.csv')\n",
+    "meta = pd.read_csv('~/Desktop/NCSA_genomics/Python Files/GlucoCheck/Data/Hall/Hall_meta.csv')\n",
     "\n",
     "trainSubjects = ['1636-69-001','1636-69-001-2','1636-69-091','2133-004','2133-018','2133-039'\n",
     "                 '1636-69-026','1636-69-032','1636-69-090','1636-69-114','1636-70-1005','1636-70-1010'\n",
@@ -44,11 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-16T20:31:12.462129Z",
-     "start_time": "2020-10-16T20:31:12.096851Z"
+     "end_time": "2020-12-05T05:36:20.162422Z",
+     "start_time": "2020-12-05T05:36:19.999494Z"
     }
    },
    "outputs": [],
@@ -78,11 +95,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-16T20:31:21.781415Z",
-     "start_time": "2020-10-16T20:31:21.598323Z"
+     "end_time": "2020-12-05T05:36:21.685631Z",
+     "start_time": "2020-12-05T05:36:21.636126Z"
     }
    },
    "outputs": [
@@ -202,54 +219,6 @@
        "      <td>156</td>\n",
        "      <td>148</td>\n",
        "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1636-69-026</td>\n",
-       "      <td>123</td>\n",
-       "      <td>122</td>\n",
-       "      <td>119</td>\n",
-       "      <td>114</td>\n",
-       "      <td>111</td>\n",
-       "      <td>110</td>\n",
-       "      <td>101</td>\n",
-       "      <td>110</td>\n",
-       "      <td>105</td>\n",
-       "      <td>101</td>\n",
-       "      <td>...</td>\n",
-       "      <td>107</td>\n",
-       "      <td>101</td>\n",
-       "      <td>103</td>\n",
-       "      <td>104</td>\n",
-       "      <td>105</td>\n",
-       "      <td>106</td>\n",
-       "      <td>108</td>\n",
-       "      <td>109</td>\n",
-       "      <td>109</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1636-69-028</td>\n",
-       "      <td>129</td>\n",
-       "      <td>131</td>\n",
-       "      <td>132</td>\n",
-       "      <td>137</td>\n",
-       "      <td>133</td>\n",
-       "      <td>133</td>\n",
-       "      <td>128</td>\n",
-       "      <td>137</td>\n",
-       "      <td>142</td>\n",
-       "      <td>143</td>\n",
-       "      <td>...</td>\n",
-       "      <td>89</td>\n",
-       "      <td>86</td>\n",
-       "      <td>82</td>\n",
-       "      <td>82</td>\n",
-       "      <td>80</td>\n",
-       "      <td>82</td>\n",
-       "      <td>84</td>\n",
-       "      <td>89</td>\n",
-       "      <td>93</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1636-69-032</td>\n",
@@ -563,33 +532,9 @@
        "      <td>140</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2133-039</td>\n",
-       "      <td>129</td>\n",
-       "      <td>111</td>\n",
-       "      <td>105</td>\n",
-       "      <td>102</td>\n",
-       "      <td>99</td>\n",
-       "      <td>103</td>\n",
-       "      <td>100</td>\n",
-       "      <td>99</td>\n",
-       "      <td>99</td>\n",
-       "      <td>100</td>\n",
-       "      <td>...</td>\n",
-       "      <td>98</td>\n",
-       "      <td>96</td>\n",
-       "      <td>96</td>\n",
-       "      <td>96</td>\n",
-       "      <td>96</td>\n",
-       "      <td>96</td>\n",
-       "      <td>95</td>\n",
-       "      <td>95</td>\n",
-       "      <td>95</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>18 rows × 580 columns</p>\n",
+       "<p>15 rows × 580 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -597,8 +542,6 @@
        "0                                                                ...        \n",
        "1636-69-001     93   93   93   95   96   95   95   95   96   97  ...   92   \n",
        "1636-69-001-2  100  111  113  114  116  121  125  137  143  148  ...  123   \n",
-       "1636-69-026    123  122  119  114  111  110  101  110  105  101  ...  107   \n",
-       "1636-69-028    129  131  132  137  133  133  128  137  142  143  ...   89   \n",
        "1636-69-032    122  123  124  128  133  137  132  131  126  122  ...  113   \n",
        "1636-69-035    112  110  105  104  104  101   99  100  105  104  ...  103   \n",
        "1636-69-048     90   88   87   87   88   83   82   74   77   83  ...   90   \n",
@@ -612,14 +555,11 @@
        "1636-70-1010    91   97  104  111  114  116  120  119  117  119  ...  109   \n",
        "2133-004       142  142  137  135  132  129  123  122  123  122  ...  171   \n",
        "2133-018       118  117  120  123  126  130  129  130  130  131  ...  112   \n",
-       "2133-039       129  111  105  102   99  103  100   99   99  100  ...   98   \n",
        "\n",
        "               572  573  574  575  576  577  578  579  Y  \n",
        "0                                                         \n",
        "1636-69-001     92   91   91   91   92   97  101  101  0  \n",
        "1636-69-001-2  127  139  148  154  158  157  156  148  0  \n",
-       "1636-69-026    101  103  104  105  106  108  109  109  1  \n",
-       "1636-69-028     86   82   82   80   82   84   89   93  2  \n",
        "1636-69-032    113  112  115  124  128  130  131  133  1  \n",
        "1636-69-035    113  116  122  124  123  124  127  130  2  \n",
        "1636-69-048     90   95   95   91   95   99  101  100  2  \n",
@@ -633,12 +573,11 @@
        "1636-70-1010   103   97   94   92   94   96   97   97  1  \n",
        "2133-004       171  172  174  174  174  174  172  167  0  \n",
        "2133-018       121  123  125  128  133  135  138  140  0  \n",
-       "2133-039        96   96   96   96   96   95   95   95  0  \n",
        "\n",
-       "[18 rows x 580 columns]"
+       "[15 rows x 580 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,11 +589,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-16T20:31:32.259892Z",
-     "start_time": "2020-10-16T20:31:32.219670Z"
+     "end_time": "2020-12-05T05:36:22.871570Z",
+     "start_time": "2020-12-05T05:36:22.848696Z"
     }
    },
    "outputs": [
@@ -820,7 +759,7 @@
        "[3 rows x 580 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,11 +771,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-16T20:31:47.596101Z",
-     "start_time": "2020-10-16T20:31:47.582171Z"
+     "end_time": "2020-12-05T05:36:24.141660Z",
+     "start_time": "2020-12-05T05:36:24.131958Z"
     }
    },
    "outputs": [],
@@ -948,7 +887,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import ConfusionMatrixDisplay\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
