pending changes pushed

--- a/Python Files/emw.ipynb
+++ b/Python Files/emw.ipynb
@@ -14,7 +14,9 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -230,7 +232,7 @@
     "# smoothing factor alpha\n",
     "\n",
     "#smoothing factor alpha = 0.0001\n",
-    "gv_EMA_1 = pd.DataFrame.ewm(gv, alpha=0.1, adjust=False).mean()\n",
+    "gv_EMA_1 = pd.DataFrame.ewm(gv, alpha=0.05, adjust=False).mean()\n",
     "\n",
     "ioa1 = index_agreement(gv_EMA_1, gv)\n",
     "ioa1"
@@ -515,7 +517,7 @@
     "# modify ticks size\n",
     "plt.xticks(fontsize=14)\n",
     "plt.yticks(fontsize=14)\n",
-    "plt.legend(labels=['GV','EMA - alpha=0.01'], fontsize=14)\n",
+    "plt.legend(labels=['GV','EMA - alpha=0.05'], fontsize=14)\n",
     "\n",
     "# title and labels\n",
     "plt.title('gv', fontsize=20)\n",
