added heatmap, updated pipeline

--- a/Python Files/Plots for Paper.ipynb
+++ b/Python Files/Plots for Paper.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T23:57:21.502845Z",
-     "start_time": "2021-01-18T23:57:11.521768Z"
+     "end_time": "2021-01-21T16:01:57.303186Z",
+     "start_time": "2021-01-21T16:01:46.224257Z"
     }
    },
    "outputs": [
@@ -31,8 +31,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T23:57:36.046622Z",
-     "start_time": "2021-01-18T23:57:21.507243Z"
+     "end_time": "2021-01-21T16:02:09.940487Z",
+     "start_time": "2021-01-21T16:01:57.307103Z"
     }
    },
    "outputs": [
@@ -124,8 +124,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-18T23:57:36.964746Z",
-     "start_time": "2021-01-18T23:57:36.060656Z"
+     "end_time": "2021-01-21T16:02:10.728433Z",
+     "start_time": "2021-01-21T16:02:09.946546Z"
     }
    },
    "outputs": [
@@ -275,6 +275,91 @@
    "source": [
     "QC_table = glucoCheckObject.dataDescribe(data)\n",
     "QC_table.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-01-21T16:02:52.922535Z",
+     "start_time": "2021-01-21T16:02:52.898866Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Subject ID</th>\n",
+       "      <th>Start</th>\n",
+       "      <th>End</th>\n",
+       "      <th># of readings</th>\n",
+       "      <th># of days</th>\n",
+       "      <th>Timestamp days</th>\n",
+       "      <th># of missing values</th>\n",
+       "      <th>% of missing values</th>\n",
+       "      <th>Avg gap size</th>\n",
+       "      <th>Max gv</th>\n",
+       "      <th>Min gv</th>\n",
+       "      <th>Mean gv</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>53</td>\n",
+       "      <td>1636-69-032</td>\n",
+       "      <td>2016-01-13 12:58:00</td>\n",
+       "      <td>2016-01-19 17:32:00</td>\n",
+       "      <td>1783</td>\n",
+       "      <td>6.17</td>\n",
+       "      <td>6 days 04:29:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>191</td>\n",
+       "      <td>67</td>\n",
+       "      <td>108.32</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Subject ID                Start                  End  # of readings  \\\n",
+       "53  1636-69-032  2016-01-13 12:58:00  2016-01-19 17:32:00           1783   \n",
+       "\n",
+       "    # of days  Timestamp days  # of missing values  % of missing values  \\\n",
+       "53       6.17 6 days 04:29:00                    3                 0.17   \n",
+       "\n",
+       "    Avg gap size Max gv Min gv  Mean gv  \n",
+       "53           1.5    191     67   108.32  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "QC_table[QC_table['Subject ID']=='1636-69-032']"
    ]
   },
   {
